[package]
name = "cubes"
description = "Applications for determining how to put a cube together."
version = "3.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cubes"]
homepage = "https://github.com/dcampbell24/cubes"
documentation = "https://docs.rs/cubes"
repository = "https://github.com/dcampbell24/cubes/tree/master/cubes-rs"
readme = "README.md"

[build-dependencies]
directories = "4"

[dependencies]
bincode = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.3", features = ["html_reports"] }
directories = "4"
env_logger = "0.9"
iced = "0.6"
log = "0.4"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "cubes_benchmark"
harness = false
