[package]
name = "cubes"
description = "Applications for determining how to put a cube together."
version = "4.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["cubes"]
homepage = "https://github.com/dcampbell24/cubes"
documentation = "https://docs.rs/cubes"
repository = "https://github.com/dcampbell24/cubes/tree/master/cubes-rs"
readme = "README.md"

[build-dependencies]
directories = "4"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
directories = "5"
env_logger = "0.11"
iced = "0.12"
log = "0.4"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[[bench]]
name = "cubes_benchmark"
harness = false
