[package]
name = "cubes"
description = "Applications for determining how to put a cube together."
version = "4.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
keywords = ["cubes"]
categories = ["mathematics", "rendering::data-formats"]
homepage = "https://github.com/dcampbell24/cubes"
documentation = "https://docs.rs/cubes"
repository = "https://github.com/dcampbell24/cubes/tree/master/cubes-rs"
readme = "README.md"

[build-dependencies]
directories = "5"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
directories = "5"
env_logger = "0.11"
iced = "0.13"
log = "0.4"
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[lints.clippy]
cargo = "warn"
pedantic = "warn"

missing_errors_doc = { level = "allow", priority = 1}
multiple_crate_versions = { level = "allow", priority = 1 }

[[bench]]
name = "cubes_benchmark"
harness = false
